@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,7 +28,6 @@ import static jdk.vm.ci.services.Services.IS_IN_NATIVE_IMAGE;
 import static org.graalvm.compiler.core.common.calc.Condition.EQ;
 import static org.graalvm.compiler.core.common.calc.Condition.LT;
 import static org.graalvm.compiler.core.common.calc.Condition.NE;
-import static org.graalvm.compiler.hotspot.GraalHotSpotVMConfigAccess.JDK;
 import static org.graalvm.compiler.hotspot.HotSpotBackend.AESCRYPT_DECRYPTBLOCK;
 import static org.graalvm.compiler.hotspot.HotSpotBackend.AESCRYPT_ENCRYPTBLOCK;
 import static org.graalvm.compiler.hotspot.HotSpotBackend.BASE64_ENCODE_BLOCK;
@@ -50,6 +49,7 @@ import java.lang.ref.PhantomReference;
 import java.lang.ref.Reference;
 import java.lang.reflect.Array;
 import java.lang.reflect.Modifier;
+import java.lang.reflect.Type;
 import java.math.BigInteger;
 import java.util.zip.CRC32;
 
@@ -68,9 +68,9 @@ import org.graalvm.compiler.hotspot.HotSpotGraalRuntimeProvider;
 import org.graalvm.compiler.hotspot.nodes.CurrentJavaThreadNode;
 import org.graalvm.compiler.hotspot.nodes.HotSpotLoadReservedReferenceNode;
 import org.graalvm.compiler.hotspot.nodes.HotSpotStoreReservedReferenceNode;
-import org.graalvm.compiler.hotspot.replacements.BigIntegerSubstitutions;
+import org.graalvm.compiler.hotspot.replacements.BigIntegerSnippets;
 import org.graalvm.compiler.hotspot.replacements.CallSiteTargetNode;
-import org.graalvm.compiler.hotspot.replacements.DigestBaseSubstitutions;
+import org.graalvm.compiler.hotspot.replacements.DigestBaseSnippets;
 import org.graalvm.compiler.hotspot.replacements.FastNotifyNode;
 import org.graalvm.compiler.hotspot.replacements.HotSpotIdentityHashCodeNode;
 import org.graalvm.compiler.hotspot.replacements.HotSpotInvocationPluginHelper;
@@ -99,7 +99,6 @@ import org.graalvm.compiler.nodes.calc.SubNode;
 import org.graalvm.compiler.nodes.calc.UnsignedRightShiftNode;
 import org.graalvm.compiler.nodes.calc.XorNode;
 import org.graalvm.compiler.nodes.extended.ForeignCallNode;
-import org.graalvm.compiler.nodes.extended.GuardingNode;
 import org.graalvm.compiler.nodes.extended.JavaReadNode;
 import org.graalvm.compiler.nodes.extended.RawLoadNode;
 import org.graalvm.compiler.nodes.graphbuilderconf.ForeignCallPlugin;
@@ -107,6 +106,7 @@ import org.graalvm.compiler.nodes.graphbuilderconf.GeneratedPluginFactory;
 import org.graalvm.compiler.nodes.graphbuilderconf.GraphBuilderConfiguration.Plugins;
 import org.graalvm.compiler.nodes.graphbuilderconf.GraphBuilderContext;
 import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugin;
+import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugin.InlineOnlyInvocationPlugin;
 import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugin.Receiver;
 import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugins;
 import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugins.Registration;
@@ -115,7 +115,6 @@ import org.graalvm.compiler.nodes.java.DynamicNewArrayNode;
 import org.graalvm.compiler.nodes.java.DynamicNewInstanceNode;
 import org.graalvm.compiler.nodes.java.InstanceOfNode;
 import org.graalvm.compiler.nodes.java.NewArrayNode;
-import org.graalvm.compiler.nodes.java.ValidateNewInstanceClassNode;
 import org.graalvm.compiler.nodes.memory.OnHeapMemoryAccess.BarrierType;
 import org.graalvm.compiler.nodes.memory.address.AddressNode;
 import org.graalvm.compiler.nodes.memory.address.OffsetAddressNode;
@@ -128,10 +127,12 @@ import org.graalvm.compiler.replacements.InvocationPluginHelper;
 import org.graalvm.compiler.replacements.MethodHandlePlugin;
 import org.graalvm.compiler.replacements.NodeIntrinsificationProvider;
 import org.graalvm.compiler.replacements.ReplacementsImpl;
+import org.graalvm.compiler.replacements.SnippetSubstitutionInvocationPlugin;
+import org.graalvm.compiler.replacements.SnippetTemplate;
 import org.graalvm.compiler.replacements.StandardGraphBuilderPlugins;
 import org.graalvm.compiler.replacements.arraycopy.ArrayCopyCallNode;
 import org.graalvm.compiler.replacements.arraycopy.ArrayCopyForeignCalls;
-import org.graalvm.compiler.replacements.arraycopy.ArrayCopyNode;
+import org.graalvm.compiler.replacements.arraycopy.ArrayCopySnippets;
 import org.graalvm.compiler.replacements.nodes.MacroNode.MacroParams;
 import org.graalvm.compiler.serviceprovider.GraalServices;
 import org.graalvm.compiler.serviceprovider.JavaVersionUtil;
@@ -141,15 +142,12 @@ import org.graalvm.word.LocationIdentity;
 import jdk.vm.ci.code.TargetDescription;
 import jdk.vm.ci.hotspot.VMIntrinsicMethod;
 import jdk.vm.ci.meta.ConstantReflectionProvider;
-import jdk.vm.ci.meta.DeoptimizationAction;
 import jdk.vm.ci.meta.JavaKind;
 import jdk.vm.ci.meta.MetaAccessProvider;
 import jdk.vm.ci.meta.ResolvedJavaField;
 import jdk.vm.ci.meta.ResolvedJavaMethod;
 import jdk.vm.ci.meta.ResolvedJavaType;
 import jdk.vm.ci.meta.UnresolvedJavaType;
-import jdk.vm.ci.services.Services;
-import sun.misc.Unsafe;
 
 /**
  * Defines the {@link Plugins} used when running on HotSpot.
@@ -170,7 +168,7 @@ public class HotSpotGraphBuilderPlugins {
                     ReplacementsImpl replacements,
                     OptionValues options,
                     TargetDescription target) {
-        InvocationPlugins invocationPlugins = new HotSpotInvocationPlugins(graalRuntime, config, compilerConfiguration);
+        InvocationPlugins invocationPlugins = new HotSpotInvocationPlugins(graalRuntime, config, compilerConfiguration, target, options);
 
         Plugins plugins = new Plugins(invocationPlugins);
         plugins.appendNodePlugin(new HotSpotExceptionDispatchPlugin(config, wordTypes.getWordKind()));
@@ -207,9 +205,9 @@ public class HotSpotGraphBuilderPlugins {
                 registerCRC32CPlugins(invocationPlugins, config, replacements);
                 registerBigIntegerPlugins(invocationPlugins, config, replacements);
                 registerSHAPlugins(invocationPlugins, config, replacements);
-                registerGHASHPlugins(invocationPlugins, config, metaAccess);
+                registerGHASHPlugins(invocationPlugins, config, metaAccess, replacements);
                 registerCounterModePlugins(invocationPlugins, config, replacements);
-                registerBase64Plugins(invocationPlugins, config, metaAccess);
+                registerBase64Plugins(invocationPlugins, config, metaAccess, replacements);
                 registerUnsafePlugins(invocationPlugins, config, replacements);
                 StandardGraphBuilderPlugins.registerInvocationPlugins(metaAccess, snippetReflection, invocationPlugins, replacements, true, false, true, graalRuntime.getHostProviders().getLowerer());
                 registerArrayPlugins(invocationPlugins, replacements, config);
@@ -239,8 +237,8 @@ public class HotSpotGraphBuilderPlugins {
             return;
         }
 
-        InvocationPlugins.Registration tl = new InvocationPlugins.Registration(plugins, "org.graalvm.compiler.truffle.runtime.hotspot.HotSpotFastThreadLocal");
-        tl.register1("get", InvocationPlugin.Receiver.class, new InvocationPlugin() {
+        Registration tl = new Registration(plugins, "org.graalvm.compiler.truffle.runtime.hotspot.HotSpotFastThreadLocal");
+        tl.register(new InvocationPlugin("get", Receiver.class) {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
                 int jvmciReservedReference0Offset = config.jvmciReservedReference0Offset;
@@ -248,9 +246,8 @@ public class HotSpotGraphBuilderPlugins {
                 b.addPush(JavaKind.Object, new HotSpotLoadReservedReferenceNode(b.getMetaAccess(), wordTypes, jvmciReservedReference0Offset));
                 return true;
             }
-
         });
-        tl.register2("set", InvocationPlugin.Receiver.class, Object[].class, new InvocationPlugin() {
+        tl.register(new InvocationPlugin("set", Receiver.class, Object[].class) {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver,
                             ValueNode value) {
@@ -260,63 +257,42 @@ public class HotSpotGraphBuilderPlugins {
                 return true;
             }
         });
-
     }
 
     private static void registerObjectPlugins(InvocationPlugins plugins, GraalHotSpotVMConfig config, Replacements replacements) {
         Registration r = new Registration(plugins, Object.class, replacements);
-        r.register1("clone", Receiver.class, new InvocationPlugin() {
+        r.register(new InlineOnlyInvocationPlugin("clone", Receiver.class) {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
                 ValueNode object = receiver.get();
                 b.addPush(JavaKind.Object, new ObjectCloneNode(MacroParams.of(b, targetMethod, object)));
                 return true;
             }
-
-            @Override
-            public boolean inlineOnly() {
-                return true;
-            }
         });
-        r.register1("hashCode", Receiver.class, new InvocationPlugin() {
+        r.register(new InlineOnlyInvocationPlugin("hashCode", Receiver.class) {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
                 ValueNode object = receiver.get();
                 b.addPush(JavaKind.Int, new HotSpotIdentityHashCodeNode(object, b.bci()));
                 return true;
             }
-
-            @Override
-            public boolean inlineOnly() {
-                return true;
-            }
         });
         if (config.inlineNotify()) {
-            r.register1("notify", Receiver.class, new InvocationPlugin() {
+            r.register(new InlineOnlyInvocationPlugin("notify", Receiver.class) {
                 @Override
                 public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
                     ValueNode object = receiver.get();
                     b.add(new FastNotifyNode(object, false, b.bci()));
                     return true;
                 }
-
-                @Override
-                public boolean inlineOnly() {
-                    return true;
-                }
             });
         }
         if (config.inlineNotifyAll()) {
-            r.register1("notifyAll", Receiver.class, new InvocationPlugin() {
+            r.register(new InlineOnlyInvocationPlugin("notifyAll", Receiver.class) {
                 @Override
                 public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
                     ValueNode object = receiver.get();
                     b.add(new FastNotifyNode(object, true, b.bci()));
-                    return true;
-                }
-
-                @Override
-                public boolean inlineOnly() {
                     return true;
                 }
             });
@@ -326,7 +302,7 @@ public class HotSpotGraphBuilderPlugins {
     private static void registerClassPlugins(Plugins plugins, GraalHotSpotVMConfig config, Replacements replacements) {
         Registration r = new Registration(plugins.getInvocationPlugins(), Class.class, replacements);
 
-        r.register1("getModifiers", Receiver.class, new InvocationPlugin() {
+        r.register(new InvocationPlugin("getModifiers", Receiver.class) {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
                 try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, config)) {
@@ -339,7 +315,7 @@ public class HotSpotGraphBuilderPlugins {
                 return true;
             }
         });
-        r.register1("isInterface", Receiver.class, new InvocationPlugin() {
+        r.register(new InvocationPlugin("isInterface", Receiver.class) {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
                 try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, config)) {
@@ -354,7 +330,7 @@ public class HotSpotGraphBuilderPlugins {
                 return true;
             }
         });
-        r.register1("isPrimitive", Receiver.class, new InvocationPlugin() {
+        r.register(new InvocationPlugin("isPrimitive", Receiver.class) {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
                 try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, config)) {
@@ -365,7 +341,7 @@ public class HotSpotGraphBuilderPlugins {
                 return true;
             }
         });
-        r.register1("getSuperclass", Receiver.class, new InvocationPlugin() {
+        r.register(new InvocationPlugin("getSuperclass", Receiver.class) {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
                 try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, config)) {
@@ -399,50 +375,25 @@ public class HotSpotGraphBuilderPlugins {
             }
         });
 
-        if (config.jvmAccIsHiddenClass != 0) {
-            r.register1("isHidden", Receiver.class, new InvocationPlugin() {
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
-                    try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, config)) {
-                        ValueNode klass = helper.readKlassFromClass(receiver.get());
-                        // Primitive Class case returns false
-                        ValueNode nonNullKlass = helper.emitNullReturnGuard(klass, ConstantNode.forBoolean(false), GraalDirectives.UNLIKELY_PROBABILITY);
-                        // return (Klass::_access_flags & jvmAccIsHiddenClass) == 0 ? false : true
-                        ValueNode accessFlags = helper.readKlassAccessFlags(nonNullKlass);
-                        LogicNode test = IntegerTestNode.create(accessFlags, ConstantNode.forInt(config.jvmAccIsHiddenClass), NodeView.DEFAULT);
-                        helper.emitFinalReturn(JavaKind.Boolean, ConditionalNode.create(test, ConstantNode.forBoolean(false), ConstantNode.forBoolean(true), NodeView.DEFAULT));
-                    }
-                    return true;
+        r.registerConditional(config.jvmAccIsHiddenClass != 0, new InvocationPlugin("isHidden", Receiver.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
+                try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, config)) {
+                    ValueNode klass = helper.readKlassFromClass(receiver.get());
+                    // Primitive Class case returns false
+                    ValueNode nonNullKlass = helper.emitNullReturnGuard(klass, ConstantNode.forBoolean(false), GraalDirectives.UNLIKELY_PROBABILITY);
+                    // return (Klass::_access_flags & jvmAccIsHiddenClass) == 0 ? false : true
+                    ValueNode accessFlags = helper.readKlassAccessFlags(nonNullKlass);
+                    LogicNode test = IntegerTestNode.create(accessFlags, ConstantNode.forInt(config.jvmAccIsHiddenClass), NodeView.DEFAULT);
+                    helper.emitFinalReturn(JavaKind.Boolean, ConditionalNode.create(test, ConstantNode.forBoolean(false), ConstantNode.forBoolean(true), NodeView.DEFAULT));
                 }
-            });
-        }
-
-        if (config.getFieldOffset("ArrayKlass::_component_mirror", Integer.class, "oop", Integer.MAX_VALUE, JDK <= 8) != Integer.MAX_VALUE) {
-            r.register1("getComponentType", Receiver.class, new InvocationPlugin() {
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
-                    try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, config)) {
-                        ValueNode klass = helper.readKlassFromClass(receiver.get());
-                        // Primitive Class case returns null
-                        final ConstantNode nullValue = ConstantNode.defaultForKind(JavaKind.Object);
-                        ValueNode klassNonNull = helper.emitNullReturnGuard(klass, nullValue, GraalDirectives.UNLIKELY_PROBABILITY);
-                        // Non-array case
-                        // if (Klass::_layout_helper >= 0) return null
-                        ValueNode layoutHelper = helper.klassLayoutHelper(klassNonNull);
-                        GuardingNode guard = helper.emitReturnIf(layoutHelper, Condition.GE, ConstantNode.forInt(config.klassLayoutHelperNeutralValue), nullValue,
-                                        GraalDirectives.UNLIKELY_PROBABILITY);
-                        // Return ArrayKlass::_component_mirror
-                        ValueNode componentMirror = helper.readArrayKlassComponentMirror(klassNonNull, guard);
-                        helper.emitFinalReturn(JavaKind.Object, componentMirror);
-                    }
-                    return true;
-                }
-            });
-        }
+                return true;
+            }
+        });
     }
 
     private static void registerCallSitePlugins(InvocationPlugins plugins) {
-        InvocationPlugin plugin = new InvocationPlugin() {
+        InvocationPlugin plugin = new InlineOnlyInvocationPlugin("getTarget", Receiver.class) {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
                 ValueNode callSite = receiver.get();
@@ -454,32 +405,22 @@ public class HotSpotGraphBuilderPlugins {
                 }
                 return true;
             }
-
-            @Override
-            public boolean inlineOnly() {
-                return true;
-            }
         };
-        plugins.register(plugin, ConstantCallSite.class, "getTarget", Receiver.class);
-        plugins.register(plugin, MutableCallSite.class, "getTarget", Receiver.class);
-        plugins.register(plugin, VolatileCallSite.class, "getTarget", Receiver.class);
+        plugins.register(ConstantCallSite.class, plugin);
+        plugins.register(MutableCallSite.class, plugin);
+        plugins.register(VolatileCallSite.class, plugin);
     }
 
     private static void registerReflectionPlugins(InvocationPlugins plugins, Replacements replacements, GraalHotSpotVMConfig config) {
         Registration r = new Registration(plugins, reflectionClass, replacements);
-        r.register0("getCallerClass", new InvocationPlugin() {
+        r.register(new InlineOnlyInvocationPlugin("getCallerClass") {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
                 b.addPush(JavaKind.Object, new HotSpotReflectionGetCallerClassNode(MacroParams.of(b, targetMethod)));
                 return true;
             }
-
-            @Override
-            public boolean inlineOnly() {
-                return true;
-            }
         });
-        r.register1("getClassAccessFlags", Class.class, new InvocationPlugin() {
+        r.register(new InvocationPlugin("getClassAccessFlags", Class.class) {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode arg) {
                 try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, config)) {
@@ -496,23 +437,17 @@ public class HotSpotGraphBuilderPlugins {
     }
 
     private static void registerUnsafePlugins(InvocationPlugins plugins, GraalHotSpotVMConfig config, Replacements replacements) {
-        Registration r;
-        if (JavaVersionUtil.JAVA_SPEC <= 8) {
-            r = new Registration(plugins, Unsafe.class, replacements);
-        } else {
-            r = new Registration(plugins, "jdk.internal.misc.Unsafe", replacements);
-        }
-        r.register6(HotSpotBackend.copyMemoryName, Receiver.class, Object.class, long.class, Object.class,
-                        long.class, long.class, new InvocationPlugin() {
-                            @Override
-                            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode srcBase, ValueNode srcOffset, ValueNode destBase,
-                                            ValueNode destOffset, ValueNode bytes) {
-                                b.add(new UnsafeCopyMemoryNode(config.doingUnsafeAccessOffset != Integer.MAX_VALUE, receiver.get(), srcBase, srcOffset, destBase, destOffset, bytes));
-                                return true;
-                            }
-                        });
+        Registration r = new Registration(plugins, "jdk.internal.misc.Unsafe", replacements);
+        r.register(new InvocationPlugin(HotSpotBackend.copyMemoryName, Receiver.class, Object.class, long.class, Object.class, long.class, long.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode srcBase, ValueNode srcOffset, ValueNode destBase,
+                            ValueNode destOffset, ValueNode bytes) {
+                b.add(new UnsafeCopyMemoryNode(config.doingUnsafeAccessOffset != Integer.MAX_VALUE, receiver.get(), srcBase, srcOffset, destBase, destOffset, bytes));
+                return true;
+            }
+        });
 
-        r.register2("allocateInstance", Receiver.class, Class.class, new InvocationPlugin() {
+        r.register(new InvocationPlugin("allocateInstance", Receiver.class, Class.class) {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver unsafe, ValueNode clazz) {
                 /* Emits a null-check for the otherwise unused receiver. */
@@ -523,8 +458,7 @@ public class HotSpotGraphBuilderPlugins {
                  * check. Such a DynamicNewInstanceNode is also never constant folded to a
                  * NewInstanceNode.
                  */
-                ValueNode clazzLegal = b.add(new ValidateNewInstanceClassNode(clazz));
-                b.addPush(JavaKind.Object, new DynamicNewInstanceNode(b.nullCheckedValue(clazzLegal, DeoptimizationAction.None), true));
+                DynamicNewInstanceNode.createAndPush(b, clazz);
                 return true;
             }
         });
@@ -532,38 +466,22 @@ public class HotSpotGraphBuilderPlugins {
 
     private static void registerSystemPlugins(InvocationPlugins plugins) {
         Registration r = new Registration(plugins, System.class);
-        r.register0("currentTimeMillis", new ForeignCallPlugin(HotSpotHostForeignCallsProvider.JAVA_TIME_MILLIS));
-        r.register0("nanoTime", new ForeignCallPlugin(HotSpotHostForeignCallsProvider.JAVA_TIME_NANOS));
-        r.register1("identityHashCode", Object.class, new InvocationPlugin() {
+        r.register(new ForeignCallPlugin(HotSpotHostForeignCallsProvider.JAVA_TIME_MILLIS, "currentTimeMillis"));
+        r.register(new ForeignCallPlugin(HotSpotHostForeignCallsProvider.JAVA_TIME_NANOS, "nanoTime"));
+        r.register(new InlineOnlyInvocationPlugin("identityHashCode", Object.class) {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode object) {
                 b.addPush(JavaKind.Int, new HotSpotIdentityHashCodeNode(object, b.bci()));
                 return true;
             }
-
-            @Override
-            public boolean inlineOnly() {
-                return true;
-            }
         });
-        r.register5("arraycopy", Object.class, int.class, Object.class, int.class, int.class, new InvocationPlugin() {
-            @Override
-            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode src, ValueNode srcPos, ValueNode dst, ValueNode dstPos, ValueNode length) {
-                b.add(new ArrayCopyNode(b.bci(), src, srcPos, dst, dstPos, length));
-                return true;
-            }
-
-            @Override
-            public boolean inlineOnly() {
-                return true;
-            }
-        });
+        ArrayCopySnippets.registerSystemArraycopyPlugin(r);
     }
 
     private static void registerArrayPlugins(InvocationPlugins plugins, Replacements replacements, GraalHotSpotVMConfig config) {
         Registration r = new Registration(plugins, Array.class, replacements);
         r.setAllowOverwrite(true);
-        r.register2("newInstance", Class.class, int.class, new InvocationPlugin() {
+        r.register(new InvocationPlugin("newInstance", Class.class, int.class) {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode componentType, ValueNode length) {
                 try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, config)) {
@@ -583,54 +501,52 @@ public class HotSpotGraphBuilderPlugins {
     }
 
     private static void registerStringPlugins(InvocationPlugins plugins, Replacements replacements, WordTypes wordTypes, ArrayCopyForeignCalls foreignCalls, GraalHotSpotVMConfig vmConfig) {
-        if (JavaVersionUtil.JAVA_SPEC > 8) {
-            final Registration utf16r = new Registration(plugins, "java.lang.StringUTF16", replacements);
-            utf16r.register3("toBytes", char[].class, int.class, int.class, new InvocationPlugin() {
-                private static final int MAX_LENGTH = Integer.MAX_VALUE >> 1;
+        final Registration utf16r = new Registration(plugins, "java.lang.StringUTF16", replacements);
+        utf16r.register(new InvocationPlugin("toBytes", char[].class, int.class, int.class) {
+            private static final int MAX_LENGTH = Integer.MAX_VALUE >> 1;
 
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode value, ValueNode srcBegin, ValueNode length) {
-                    try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, vmConfig)) {
-                        helper.intrinsicRangeCheck(srcBegin, Condition.LT, ConstantNode.forInt(0));
-                        helper.intrinsicRangeCheck(length, Condition.LT, ConstantNode.forInt(0));
-                        helper.intrinsicRangeCheck(length, Condition.GT, ConstantNode.forInt(MAX_LENGTH));
-                        ValueNode valueLength = b.add(new ArrayLengthNode(value));
-                        ValueNode limit = b.add(new SubNode(valueLength, length));
-                        helper.intrinsicRangeCheck(srcBegin, Condition.GT, limit);
-                        ValueNode newArray = b.add(new NewArrayNode(b.getMetaAccess().lookupJavaType(Byte.TYPE), b.add(new LeftShiftNode(length, ConstantNode.forInt(1))), false));
-                        b.addPush(JavaKind.Object, newArray);
-                        // The stateAfter should include the value pushed, so push it first and then
-                        // perform the call that fills in the array.
-                        b.add(new ArrayCopyCallNode(foreignCalls, wordTypes, value, srcBegin, newArray, ConstantNode.forInt(0), length, JavaKind.Char, LocationIdentity.init(), false, true, true,
-                                        vmConfig.heapWordSize));
-                    }
-                    return true;
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode value, ValueNode srcBegin, ValueNode length) {
+                try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, vmConfig)) {
+                    helper.intrinsicRangeCheck(srcBegin, Condition.LT, ConstantNode.forInt(0));
+                    helper.intrinsicRangeCheck(length, Condition.LT, ConstantNode.forInt(0));
+                    helper.intrinsicRangeCheck(length, Condition.GT, ConstantNode.forInt(MAX_LENGTH));
+                    ValueNode valueLength = b.add(new ArrayLengthNode(value));
+                    ValueNode limit = b.add(new SubNode(valueLength, length));
+                    helper.intrinsicRangeCheck(srcBegin, Condition.GT, limit);
+                    ValueNode newArray = b.add(new NewArrayNode(b.getMetaAccess().lookupJavaType(Byte.TYPE), b.add(new LeftShiftNode(length, ConstantNode.forInt(1))), false));
+                    b.addPush(JavaKind.Object, newArray);
+                    // The stateAfter should include the value pushed, so push it first and then
+                    // perform the call that fills in the array.
+                    b.add(new ArrayCopyCallNode(foreignCalls, wordTypes, value, srcBegin, newArray, ConstantNode.forInt(0), length, JavaKind.Char, LocationIdentity.init(), false, true, true,
+                                    vmConfig.heapWordSize));
                 }
-            });
-            utf16r.register5("getChars", byte[].class, int.class, int.class, char[].class, int.class, new InvocationPlugin() {
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode value, ValueNode srcBegin, ValueNode srcEnd, ValueNode dst,
-                                ValueNode dstBegin) {
-                    try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, vmConfig)) {
-                        ValueNode length = helper.sub(srcEnd, srcBegin);
-                        helper.intrinsicRangeCheck(srcBegin, Condition.LT, ConstantNode.forInt(0));
-                        helper.intrinsicRangeCheck(length, Condition.LT, ConstantNode.forInt(0));
-                        ValueNode srcLimit = helper.sub(helper.shr(helper.length(value), 1), length);
-                        helper.intrinsicRangeCheck(srcBegin, Condition.GT, srcLimit);
-                        ValueNode limit = helper.sub(helper.length(dst), length);
-                        helper.intrinsicRangeCheck(dstBegin, Condition.GT, limit);
-                        b.add(new ArrayCopyCallNode(foreignCalls, wordTypes, value, srcBegin, dst, dstBegin, length, JavaKind.Char, JavaKind.Byte, JavaKind.Char, false, true, true,
-                                        vmConfig.heapWordSize));
-                    }
-                    return true;
+                return true;
+            }
+        });
+        utf16r.register(new InvocationPlugin("getChars", byte[].class, int.class, int.class, char[].class, int.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode value, ValueNode srcBegin, ValueNode srcEnd, ValueNode dst,
+                            ValueNode dstBegin) {
+                try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, vmConfig)) {
+                    ValueNode length = helper.sub(srcEnd, srcBegin);
+                    helper.intrinsicRangeCheck(srcBegin, Condition.LT, ConstantNode.forInt(0));
+                    helper.intrinsicRangeCheck(length, Condition.LT, ConstantNode.forInt(0));
+                    ValueNode srcLimit = helper.sub(helper.shr(helper.length(value), 1), length);
+                    helper.intrinsicRangeCheck(srcBegin, Condition.GT, srcLimit);
+                    ValueNode limit = helper.sub(helper.length(dst), length);
+                    helper.intrinsicRangeCheck(dstBegin, Condition.GT, limit);
+                    b.add(new ArrayCopyCallNode(foreignCalls, wordTypes, value, srcBegin, dst, dstBegin, length, JavaKind.Char, JavaKind.Byte, JavaKind.Char, false, true, true,
+                                    vmConfig.heapWordSize));
                 }
-            });
-        }
+                return true;
+            }
+        });
     }
 
     private static void registerThreadPlugins(InvocationPlugins plugins, GraalHotSpotVMConfig config, Replacements replacements) {
         Registration r = new Registration(plugins, Thread.class, replacements);
-        r.register0("currentThread", new InvocationPlugin() {
+        r.register(new InvocationPlugin("currentThread") {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
                 try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, config)) {
@@ -641,48 +557,36 @@ public class HotSpotGraphBuilderPlugins {
             }
         });
 
-        if (config.osThreadInterruptedOffset != Integer.MAX_VALUE) {
-            // This substitution is no longer in used when threadObj is a handle
-            assert !config.threadObjectFieldIsHandle;
-            r.register2("isInterrupted", Receiver.class, boolean.class, new InvocationPlugin() {
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode clearInterrupted) {
-                    try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, config)) {
-                        ValueNode receiverThreadObject = receiver.get();
-                        CurrentJavaThreadNode thread = b.add(new CurrentJavaThreadNode(helper.getWordKind()));
-                        ValueNode currentThreadObject = helper.readCurrentThreadObject(thread);
+        // This substitution is no longer in used when threadObj is a handle
+        r.registerConditional(config.osThreadInterruptedOffset != Integer.MAX_VALUE && !config.threadObjectFieldIsHandle, new InvocationPlugin("isInterrupted", Receiver.class, boolean.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode clearInterrupted) {
+                try (HotSpotInvocationPluginHelper helper = new HotSpotInvocationPluginHelper(b, targetMethod, config)) {
+                    ValueNode receiverThreadObject = receiver.get();
+                    CurrentJavaThreadNode thread = b.add(new CurrentJavaThreadNode(helper.getWordKind()));
+                    ValueNode currentThreadObject = helper.readCurrentThreadObject(thread);
 
-                        // if (this != Thread.currentThread()) do fallback
-                        helper.doFallbackIf(receiverThreadObject, NE, currentThreadObject, GraalDirectives.UNLIKELY_PROBABILITY);
-                        ValueNode osThread = helper.readOsThread(thread);
-                        ValueNode interrupted = helper.readOsThreadInterrupted(osThread);
+                    // if (this != Thread.currentThread()) do fallback
+                    helper.doFallbackIf(receiverThreadObject, NE, currentThreadObject, GraalDirectives.UNLIKELY_PROBABILITY);
+                    ValueNode osThread = helper.readOsThread(thread);
+                    ValueNode interrupted = helper.readOsThreadInterrupted(osThread);
 
-                        // if (thread._osthread._isinterrupted == 0) return false
-                        helper.emitReturnIf(interrupted, EQ, ConstantNode.forInt(0), ConstantNode.forBoolean(false), GraalDirectives.LIKELY_PROBABILITY);
+                    // if (thread._osthread._isinterrupted == 0) return false
+                    helper.emitReturnIf(interrupted, EQ, ConstantNode.forInt(0), ConstantNode.forBoolean(false), GraalDirectives.LIKELY_PROBABILITY);
 
-                        // if (clearInterrupted) fallback to invoke
-                        helper.doFallbackIf(clearInterrupted, EQ, ConstantNode.forBoolean(true), GraalDirectives.UNLIKELY_PROBABILITY);
+                    // if (clearInterrupted) fallback to invoke
+                    helper.doFallbackIf(clearInterrupted, EQ, ConstantNode.forBoolean(true), GraalDirectives.UNLIKELY_PROBABILITY);
 
-                        // return interrupted == 0 ? false : true
-                        LogicNode test = helper.createCompare(interrupted, CanonicalCondition.EQ, ConstantNode.forInt(0));
-                        helper.emitFinalReturn(JavaKind.Boolean, ConditionalNode.create(test, ConstantNode.forBoolean(false), ConstantNode.forBoolean(true), NodeView.DEFAULT));
-                    }
-                    return true;
+                    // return interrupted == 0 ? false : true
+                    LogicNode test = helper.createCompare(interrupted, CanonicalCondition.EQ, ConstantNode.forInt(0));
+                    helper.emitFinalReturn(JavaKind.Boolean, ConditionalNode.create(test, ConstantNode.forBoolean(false), ConstantNode.forBoolean(true), NodeView.DEFAULT));
                 }
-            });
-        }
-
+                return true;
+            }
+        });
     }
 
-    public static final String reflectionClass;
-
-    static {
-        if (JavaVersionUtil.JAVA_SPEC <= 8) {
-            reflectionClass = "sun.reflect.Reflection";
-        } else {
-            reflectionClass = "jdk.internal.reflect.Reflection";
-        }
-    }
+    public static final String reflectionClass = "jdk.internal.reflect.Reflection";
 
     public static String lookupIntrinsicName(GraalHotSpotVMConfig config, String className, String name1, String name2) {
         return selectIntrinsicName(config, className, name1, name2).getLeft();
@@ -724,7 +628,7 @@ public class HotSpotGraphBuilderPlugins {
     }
 
     // Fully qualified name is a workaround for JDK-8056066
-    public static class AESCryptPlugin implements org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugin {
+    public static class AESCryptPlugin extends org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugin {
         private final boolean doEncrypt;
 
         public static ResolvedJavaType getType(ResolvedJavaType context, String typeName) {
@@ -740,7 +644,8 @@ public class HotSpotGraphBuilderPlugins {
             return getType(context, "Lcom/sun/crypto/provider/AESCrypt;");
         }
 
-        AESCryptPlugin(boolean doEncrypt) {
+        AESCryptPlugin(boolean doEncrypt, String name, Type... argumentTypes) {
+            super(name, argumentTypes);
             this.doEncrypt = doEncrypt;
         }
 
@@ -783,7 +688,7 @@ public class HotSpotGraphBuilderPlugins {
         }
     }
 
-    public static class CipherBlockChainingCryptPlugin implements InvocationPlugin {
+    public static class CipherBlockChainingCryptPlugin extends InvocationPlugin {
         private final boolean doEncrypt;
 
         public static ResolvedJavaType getType(ResolvedJavaType context, String typeName) {
@@ -803,7 +708,8 @@ public class HotSpotGraphBuilderPlugins {
             return getType(context, "Lcom/sun/crypto/provider/FeedbackCipher;");
         }
 
-        CipherBlockChainingCryptPlugin(boolean doEncrypt) {
+        CipherBlockChainingCryptPlugin(boolean doEncrypt, String name, Type... argumentTypes) {
+            super(name, argumentTypes);
             this.doEncrypt = doEncrypt;
         }
 
@@ -855,137 +761,98 @@ public class HotSpotGraphBuilderPlugins {
     }
 
     private static void registerAESPlugins(InvocationPlugins plugins, GraalHotSpotVMConfig config, Replacements replacements) {
-        if (config.useAESIntrinsics) {
-            assert config.aescryptEncryptBlockStub != 0L;
-            assert config.aescryptDecryptBlockStub != 0L;
-            assert config.cipherBlockChainingEncryptAESCryptStub != 0L;
-            assert config.cipherBlockChainingDecryptAESCryptStub != 0L;
+        Registration r = new Registration(plugins, "com.sun.crypto.provider.CipherBlockChaining", replacements);
+        r.registerConditional(config.useAESIntrinsics && config.cipherBlockChainingEncryptAESCryptStub != 0L,
+                        new CipherBlockChainingCryptPlugin(true, "implEncrypt", Receiver.class, byte[].class, int.class, int.class, byte[].class, int.class));
+        r.registerConditional(config.useAESIntrinsics && config.cipherBlockChainingDecryptAESCryptStub != 0L,
+                        new CipherBlockChainingCryptPlugin(false, "implDecrypt", Receiver.class, byte[].class, int.class, int.class, byte[].class, int.class));
 
-            Registration r = new Registration(plugins, "com.sun.crypto.provider.CipherBlockChaining", replacements);
-
-            Pair<String, String> cbcEncryptName = selectIntrinsicName(config, "com/sun/crypto/provider/CipherBlockChaining", "implEncrypt", "encrypt");
-            try {
-                r.registerOptional6(cbcEncryptName.getLeft(), Receiver.class, byte[].class, int.class, int.class, byte[].class, int.class, new CipherBlockChainingCryptPlugin(true));
-            } catch (NoSuchMethodError e3) {
-                throw new GraalError(e3, "Found method named '%s' instead of '%s' in class '%s'. This is most likely because the JVMCI JDK in %s was built on an incompatible base JDK.",
-                                cbcEncryptName.getRight(), cbcEncryptName.getLeft(), r.getDeclaringType().getTypeName(), Services.getSavedProperties().get("java.home"));
-            }
-
-            Pair<String, String> cbcDecryptName = selectIntrinsicName(config, "com/sun/crypto/provider/CipherBlockChaining", "implDecrypt", "decrypt");
-            try {
-                r.registerOptional6(cbcDecryptName.getLeft(), Receiver.class, byte[].class, int.class, int.class, byte[].class, int.class, new CipherBlockChainingCryptPlugin(false));
-            } catch (NoSuchMethodError e2) {
-                throw new GraalError(e2, "Found method named '%s' instead of '%s' in class '%s'. This is most likely because the JVMCI JDK in %s was built on an incompatible base JDK.",
-                                cbcDecryptName.getRight(), cbcDecryptName.getLeft(), r.getDeclaringType().getTypeName(), Services.getSavedProperties().get("java.home"));
-            }
-
-            r = new Registration(plugins, "com.sun.crypto.provider.AESCrypt", replacements);
-
-            Pair<String, String> aesEncryptName = selectIntrinsicName(config, "com/sun/crypto/provider/AESCrypt", "implEncryptBlock", "encryptBlock");
-            try {
-                r.registerOptional5(aesEncryptName.getLeft(), Receiver.class, byte[].class, int.class, byte[].class, int.class, new AESCryptPlugin(true));
-            } catch (NoSuchMethodError e1) {
-                throw new GraalError(e1, "Found method named '%s' instead of '%s' in class '%s'. This is most likely because the JVMCI JDK in %s was built on an incompatible base JDK.",
-                                aesEncryptName.getRight(), aesEncryptName.getLeft(), r.getDeclaringType().getTypeName(), Services.getSavedProperties().get("java.home"));
-            }
-
-            Pair<String, String> aesDecryptName = selectIntrinsicName(config, "com/sun/crypto/provider/AESCrypt", "implDecryptBlock", "decryptBlock");
-            try {
-                r.registerOptional5(aesDecryptName.getLeft(), Receiver.class, byte[].class, int.class, byte[].class, int.class, new AESCryptPlugin(false));
-            } catch (NoSuchMethodError e) {
-                throw new GraalError(e, "Found method named '%s' instead of '%s' in class '%s'. This is most likely because the JVMCI JDK in %s was built on an incompatible base JDK.",
-                                aesDecryptName.getRight(), aesDecryptName.getLeft(), r.getDeclaringType().getTypeName(), Services.getSavedProperties().get("java.home"));
-            }
-        }
+        r = new Registration(plugins, "com.sun.crypto.provider.AESCrypt", replacements);
+        r.registerConditional(config.useAESIntrinsics && config.aescryptEncryptBlockStub != 0L,
+                        new AESCryptPlugin(true, "implEncryptBlock", Receiver.class, byte[].class, int.class, byte[].class, int.class));
+        r.registerConditional(config.useAESIntrinsics && config.aescryptDecryptBlockStub != 0L,
+                        new AESCryptPlugin(false, "implDecryptBlock", Receiver.class, byte[].class, int.class, byte[].class, int.class));
     }
 
     private static void registerBigIntegerPlugins(InvocationPlugins plugins, GraalHotSpotVMConfig config, Replacements replacements) {
         Registration r = new Registration(plugins, BigInteger.class, replacements);
-        assert !config.useMultiplyToLenIntrinsic() || config.multiplyToLen != 0L;
-        if (JavaVersionUtil.JAVA_SPEC <= 8) {
-            r.registerConditionalMethodSubstitution(config.useMultiplyToLenIntrinsic(), BigIntegerSubstitutions.class, "multiplyToLen", "multiplyToLenStatic", int[].class, int.class, int[].class,
-                            int.class, int[].class);
-        } else {
-            r.registerConditionalMethodSubstitution(config.useMultiplyToLenIntrinsic(), BigIntegerSubstitutions.class, "implMultiplyToLen", "multiplyToLenStatic", int[].class, int.class, int[].class,
-                            int.class, int[].class);
-        }
-        if (config.useMulAddIntrinsic()) {
-            r.register5("implMulAdd", int[].class, int[].class, int.class, int.class, int.class, new InvocationPlugin() {
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode out, ValueNode in, ValueNode offset, ValueNode len, ValueNode k) {
-                    try (InvocationPluginHelper helper = new InvocationPluginHelper(b, targetMethod)) {
-                        ValueNode outNonNull = b.nullCheckedValue(out);
-                        ValueNode outNonNullLength = b.add(new ArrayLengthNode(outNonNull));
-                        ValueNode newOffset = new SubNode(outNonNullLength, offset);
-                        ForeignCallNode call = new ForeignCallNode(HotSpotBackend.MUL_ADD, helper.arrayStart(outNonNull, JavaKind.Int), helper.arrayStart(in, JavaKind.Int), newOffset, len, k);
-                        b.addPush(JavaKind.Int, call);
-                    }
-                    return true;
+        r.registerConditional(config.useMultiplyToLenIntrinsic(), new SnippetSubstitutionInvocationPlugin<>(BigIntegerSnippets.Templates.class,
+                        "implMultiplyToLen", int[].class, int.class, int[].class, int.class, int[].class) {
+            @Override
+            public SnippetTemplate.SnippetInfo getSnippet(BigIntegerSnippets.Templates templates) {
+                return templates.implMultiplyToLen;
+            }
+        });
+        r.registerConditional(config.useMulAddIntrinsic(), new InvocationPlugin("implMulAdd", int[].class, int[].class, int.class, int.class, int.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode out, ValueNode in, ValueNode offset, ValueNode len, ValueNode k) {
+                try (InvocationPluginHelper helper = new InvocationPluginHelper(b, targetMethod)) {
+                    ValueNode outNonNull = b.nullCheckedValue(out);
+                    ValueNode outNonNullLength = b.add(new ArrayLengthNode(outNonNull));
+                    ValueNode newOffset = new SubNode(outNonNullLength, offset);
+                    ForeignCallNode call = new ForeignCallNode(HotSpotBackend.MUL_ADD, helper.arrayStart(outNonNull, JavaKind.Int), helper.arrayStart(in, JavaKind.Int), newOffset, len, k);
+                    b.addPush(JavaKind.Int, call);
                 }
-            });
-        }
-        if (config.useMontgomeryMultiplyIntrinsic()) {
-            /*
-             * static int[] implMontgomeryMultiply(int[] a, int[] b, int[] n, int len, long inv,
-             * int[] product)
-             */
-            r.register6("implMontgomeryMultiply", int[].class, int[].class, int[].class, int.class, long.class, int[].class, new InvocationPlugin() {
+                return true;
+            }
+        });
+        /*
+         * static int[] implMontgomeryMultiply(int[] a, int[] b, int[] n, int len, long inv, int[]
+         * product)
+         */
+        r.registerConditional(config.useMontgomeryMultiplyIntrinsic(), new InvocationPlugin("implMontgomeryMultiply", int[].class, int[].class, int[].class, int.class, long.class, int[].class) {
 
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode a, ValueNode bObject, ValueNode n, ValueNode len, ValueNode inv,
-                                ValueNode product) {
-                    try (InvocationPluginHelper helper = new InvocationPluginHelper(b, targetMethod)) {
-                        // The stub doesn't return the right value for the intrinsic so push it here
-                        // and the proper after FrameState will be put on ForeignCallNode by add.
-                        b.addPush(JavaKind.Object, product);
-                        b.add(new ForeignCallNode(HotSpotBackend.MONTGOMERY_MULTIPLY, helper.arrayStart(a, JavaKind.Int), helper.arrayStart(bObject, JavaKind.Int),
-                                        helper.arrayStart(n, JavaKind.Int), len, inv, helper.arrayStart(product, JavaKind.Int)));
-                    }
-                    return true;
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode a, ValueNode bObject, ValueNode n, ValueNode len, ValueNode inv,
+                            ValueNode product) {
+                try (InvocationPluginHelper helper = new InvocationPluginHelper(b, targetMethod)) {
+                    // The stub doesn't return the right value for the intrinsic so push it here
+                    // and the proper after FrameState will be put on ForeignCallNode by add.
+                    b.addPush(JavaKind.Object, product);
+                    b.add(new ForeignCallNode(HotSpotBackend.MONTGOMERY_MULTIPLY, helper.arrayStart(a, JavaKind.Int), helper.arrayStart(bObject, JavaKind.Int),
+                                    helper.arrayStart(n, JavaKind.Int), len, inv, helper.arrayStart(product, JavaKind.Int)));
                 }
-            });
-        }
-        if (config.useMontgomerySquareIntrinsic()) {
-            /*
-             * static int[] implMontgomerySquare(int[] a, int[] n, int len, long inv, int[] product)
-             */
-            r.register5("implMontgomerySquare", int[].class, int[].class, int.class, long.class, int[].class, new InvocationPlugin() {
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode a, ValueNode n, ValueNode len, ValueNode inv, ValueNode product) {
-                    try (InvocationPluginHelper helper = new InvocationPluginHelper(b, targetMethod)) {
-                        // The stub doesn't return the right value for the intrinsic so push it here
-                        // and the proper after FrameState will be put on ForeignCallNode by add.
-                        b.addPush(JavaKind.Object, product);
-                        b.add(new ForeignCallNode(HotSpotBackend.MONTGOMERY_SQUARE, helper.arrayStart(a, JavaKind.Int), helper.arrayStart(n, JavaKind.Int), len, inv,
-                                        helper.arrayStart(product, JavaKind.Int)));
-                    }
-                    return true;
+                return true;
+            }
+        });
+        /*
+         * static int[] implMontgomerySquare(int[] a, int[] n, int len, long inv, int[] product)
+         */
+        r.registerConditional(config.useMontgomerySquareIntrinsic(), new InvocationPlugin("implMontgomerySquare", int[].class, int[].class, int.class, long.class, int[].class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode a, ValueNode n, ValueNode len, ValueNode inv, ValueNode product) {
+                try (InvocationPluginHelper helper = new InvocationPluginHelper(b, targetMethod)) {
+                    // The stub doesn't return the right value for the intrinsic so push it here
+                    // and the proper after FrameState will be put on ForeignCallNode by add.
+                    b.addPush(JavaKind.Object, product);
+                    b.add(new ForeignCallNode(HotSpotBackend.MONTGOMERY_SQUARE, helper.arrayStart(a, JavaKind.Int), helper.arrayStart(n, JavaKind.Int), len, inv,
+                                    helper.arrayStart(product, JavaKind.Int)));
                 }
-            });
-        }
-        if (config.useSquareToLenIntrinsic()) {
-            /*
-             * static int[] implSquareToLen(int[] x, int len, int[] z, int zLen)
-             */
-            r.register4("implSquareToLen", int[].class, int.class, int[].class, int.class, new InvocationPlugin() {
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode x, ValueNode len, ValueNode z, ValueNode zlen) {
-                    try (InvocationPluginHelper helper = new InvocationPluginHelper(b, targetMethod)) {
-                        // The stub doesn't return the right value for the intrinsic so push it here
-                        // and the proper after FrameState will be put on ForeignCallNode by add.
-                        b.addPush(JavaKind.Object, z);
-                        b.add(new ForeignCallNode(HotSpotBackend.SQUARE_TO_LEN, helper.arrayStart(x, JavaKind.Int), len, helper.arrayStart(z, JavaKind.Int), zlen));
-                    }
-                    return true;
+                return true;
+            }
+        });
+        /*
+         * static int[] implSquareToLen(int[] x, int len, int[] z, int zLen)
+         */
+        r.registerConditional(config.useSquareToLenIntrinsic(), new InvocationPlugin("implSquareToLen", int[].class, int.class, int[].class, int.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode x, ValueNode len, ValueNode z, ValueNode zlen) {
+                try (InvocationPluginHelper helper = new InvocationPluginHelper(b, targetMethod)) {
+                    // The stub doesn't return the right value for the intrinsic so push it here
+                    // and the proper after FrameState will be put on ForeignCallNode by add.
+                    b.addPush(JavaKind.Object, z);
+                    b.add(new ForeignCallNode(HotSpotBackend.SQUARE_TO_LEN, helper.arrayStart(x, JavaKind.Int), len, helper.arrayStart(z, JavaKind.Int), zlen));
                 }
-            });
-        }
+                return true;
+            }
+        });
     }
 
-    static class SHAInvocationPlugin implements InvocationPlugin {
+    static class SHAInvocationPlugin extends InvocationPlugin {
         private final ForeignCallDescriptor descriptor;
 
         SHAInvocationPlugin(ForeignCallDescriptor descriptor) {
+            super("implCompress0", Receiver.class, byte[].class, int.class);
             this.descriptor = descriptor;
         }
 
@@ -1010,81 +877,61 @@ public class HotSpotGraphBuilderPlugins {
         boolean useSha256 = config.useSHA256Intrinsics();
         boolean useSha512 = config.useSHA512Intrinsics();
 
-        if (isIntrinsicName(config, "sun/security/provider/DigestBase", "implCompressMultiBlock0") && (useSha1 || useSha256 || useSha512)) {
-            Registration r = new Registration(plugins, "sun.security.provider.DigestBase", replacements);
-            r.registerMethodSubstitution(DigestBaseSubstitutions.class, "implCompressMultiBlock0", Receiver.class, byte[].class, int.class, int.class);
-        }
+        boolean implCompressMultiBlock0Enabled = isIntrinsicName(config, "sun/security/provider/DigestBase", "implCompressMultiBlock0") && (useSha1 || useSha256 || useSha512);
+        Registration r = new Registration(plugins, "sun.security.provider.DigestBase", replacements);
+        r.registerConditional(implCompressMultiBlock0Enabled, new SnippetSubstitutionInvocationPlugin<>(DigestBaseSnippets.Templates.class,
+                        "implCompressMultiBlock0", Receiver.class, byte[].class, int.class, int.class) {
+            @Override
+            protected Object[] getConstantArguments(ResolvedJavaMethod targetMethod) {
+                ResolvedJavaType declaringClass = targetMethod.getDeclaringClass();
+                return new Object[]{
+                                declaringClass,
+                                HotSpotReplacementsUtil.getType(declaringClass, "Lsun/security/provider/SHA;"),
+                                HotSpotReplacementsUtil.getType(declaringClass, "Lsun/security/provider/SHA2;"),
+                                HotSpotReplacementsUtil.getType(declaringClass, "Lsun/security/provider/SHA5;")
+                };
+            }
 
-        Pair<String, String> implCompressName = selectIntrinsicName(config, "sun/security/provider/SHA", "implCompress", "implCompress0");
-        if (useSha1) {
-            assert config.sha1ImplCompress != 0L;
-            Registration r = new Registration(plugins, "sun.security.provider.SHA", replacements);
-            InvocationPlugin plugin = new SHAInvocationPlugin(HotSpotBackend.SHA_IMPL_COMPRESS);
-            try {
-                r.register3(implCompressName.getLeft(), Receiver.class, byte[].class, int.class, plugin);
-            } catch (NoSuchMethodError e) {
-                throw new GraalError(e, "Found method named '%s' instead of '%s' in class '%s'. This is most likely because the JVMCI JDK in %s was built on an incompatible base JDK.",
-                                implCompressName.getRight(), implCompressName.getLeft(), r.getDeclaringType().getTypeName(), Services.getSavedProperties().get("java.home"));
+            @Override
+            public SnippetTemplate.SnippetInfo getSnippet(DigestBaseSnippets.Templates templates) {
+                return templates.implCompressMultiBlock0;
             }
-        }
-        if (useSha256) {
-            assert config.sha256ImplCompress != 0L;
-            Registration r = new Registration(plugins, "sun.security.provider.SHA2", replacements);
-            InvocationPlugin plugin = new SHAInvocationPlugin(HotSpotBackend.SHA2_IMPL_COMPRESS);
-            try {
-                r.register3(implCompressName.getLeft(), Receiver.class, byte[].class, int.class, plugin);
-            } catch (NoSuchMethodError e) {
-                throw new GraalError(e, "Found method named '%s' instead of '%s' in class '%s'. This is most likely because the JVMCI JDK in %s was built on an incompatible base JDK.",
-                                implCompressName.getRight(), implCompressName.getLeft(), r.getDeclaringType().getTypeName(), Services.getSavedProperties().get("java.home"));
-            }
-        }
-        if (useSha512) {
-            assert config.sha512ImplCompress != 0L;
-            Registration r = new Registration(plugins, "sun.security.provider.SHA5", replacements);
-            InvocationPlugin plugin = new SHAInvocationPlugin(HotSpotBackend.SHA5_IMPL_COMPRESS);
-            try {
-                r.register3(implCompressName.getLeft(), Receiver.class, byte[].class, int.class, plugin);
-            } catch (NoSuchMethodError e) {
-                throw new GraalError(e, "Found method named '%s' instead of '%s' in class '%s'. This is most likely because the JVMCI JDK in %s was built on an incompatible base JDK.",
-                                implCompressName.getRight(), implCompressName.getLeft(), r.getDeclaringType().getTypeName(), Services.getSavedProperties().get("java.home"));
-            }
-        }
+        });
+
+        Registration rSha1 = new Registration(plugins, "sun.security.provider.SHA", replacements);
+        rSha1.registerConditional(config.useSHA1Intrinsics(), new SHAInvocationPlugin(HotSpotBackend.SHA_IMPL_COMPRESS));
+
+        Registration rSha256 = new Registration(plugins, "sun.security.provider.SHA2", replacements);
+        rSha256.registerConditional(config.useSHA256Intrinsics(), new SHAInvocationPlugin(HotSpotBackend.SHA2_IMPL_COMPRESS));
+
+        Registration rSha512 = new Registration(plugins, "sun.security.provider.SHA5", replacements);
+        rSha512.registerConditional(config.useSHA512Intrinsics(), new SHAInvocationPlugin(HotSpotBackend.SHA5_IMPL_COMPRESS));
     }
 
-    private static void registerGHASHPlugins(InvocationPlugins plugins, GraalHotSpotVMConfig config, MetaAccessProvider metaAccess) {
-        if (config.useGHASHIntrinsics()) {
-            assert config.ghashProcessBlocks != 0L;
-            Registration r = new Registration(plugins, "com.sun.crypto.provider.GHASH");
-            r.register5("processBlocks",
-                            byte[].class,
-                            int.class,
-                            int.class,
-                            long[].class,
-                            long[].class,
-                            new InvocationPlugin() {
-                                @Override
-                                public boolean apply(GraphBuilderContext b,
-                                                ResolvedJavaMethod targetMethod,
-                                                Receiver receiver,
-                                                ValueNode data,
-                                                ValueNode inOffset,
-                                                ValueNode blocks,
-                                                ValueNode state,
-                                                ValueNode hashSubkey) {
-                                    int longArrayBaseOffset = metaAccess.getArrayBaseOffset(JavaKind.Long);
-                                    int byteArrayBaseOffset = metaAccess.getArrayBaseOffset(JavaKind.Byte);
-                                    ValueNode dataOffset = AddNode.create(ConstantNode.forInt(byteArrayBaseOffset), inOffset, NodeView.DEFAULT);
-                                    ComputeObjectAddressNode dataAddress = b.add(new ComputeObjectAddressNode(data, dataOffset));
-                                    ComputeObjectAddressNode stateAddress = b.add(new ComputeObjectAddressNode(state, ConstantNode.forInt(longArrayBaseOffset)));
-                                    ComputeObjectAddressNode hashSubkeyAddress = b.add(new ComputeObjectAddressNode(hashSubkey, ConstantNode.forInt(longArrayBaseOffset)));
-                                    b.add(new ForeignCallNode(GHASH_PROCESS_BLOCKS, stateAddress, hashSubkeyAddress, dataAddress, blocks));
-                                    return true;
-                                }
-                            });
-        }
+    private static void registerGHASHPlugins(InvocationPlugins plugins, GraalHotSpotVMConfig config, MetaAccessProvider metaAccess, Replacements replacements) {
+        Registration r = new Registration(plugins, "com.sun.crypto.provider.GHASH", replacements);
+        r.registerConditional(config.useGHASHIntrinsics(), new InvocationPlugin("processBlocks", byte[].class, int.class, int.class, long[].class, long[].class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver,
+                            ValueNode data, ValueNode inOffset, ValueNode blocks, ValueNode state, ValueNode hashSubkey) {
+                int longArrayBaseOffset = metaAccess.getArrayBaseOffset(JavaKind.Long);
+                int byteArrayBaseOffset = metaAccess.getArrayBaseOffset(JavaKind.Byte);
+                ValueNode dataOffset = AddNode.create(ConstantNode.forInt(byteArrayBaseOffset), inOffset, NodeView.DEFAULT);
+                ComputeObjectAddressNode dataAddress = b.add(new ComputeObjectAddressNode(data, dataOffset));
+                ComputeObjectAddressNode stateAddress = b.add(new ComputeObjectAddressNode(state, ConstantNode.forInt(longArrayBaseOffset)));
+                ComputeObjectAddressNode hashSubkeyAddress = b.add(new ComputeObjectAddressNode(hashSubkey, ConstantNode.forInt(longArrayBaseOffset)));
+                b.add(new ForeignCallNode(GHASH_PROCESS_BLOCKS, stateAddress, hashSubkeyAddress, dataAddress, blocks));
+                return true;
+            }
+        });
     }
 
-    static class CounterModeCryptPlugin implements InvocationPlugin {
+    static class CounterModeCryptPlugin extends InvocationPlugin {
+
+        CounterModeCryptPlugin() {
+            super("implCrypt", Receiver.class, byte[].class, int.class, int.class, byte[].class, int.class);
+        }
+
         public static ResolvedJavaType getType(ResolvedJavaType context, String typeName) {
             try {
                 UnresolvedJavaType unresolved = UnresolvedJavaType.create(typeName);
@@ -1146,164 +993,131 @@ public class HotSpotGraphBuilderPlugins {
     }
 
     private static void registerCounterModePlugins(InvocationPlugins plugins, GraalHotSpotVMConfig config, Replacements replacements) {
-        if (isIntrinsicName(config, "com/sun/crypto/provider/CounterMode", "implCrypt") && config.useAESCTRIntrinsics) {
-            assert config.counterModeAESCrypt != 0L;
-            Registration r = new Registration(plugins, "com.sun.crypto.provider.CounterMode", replacements);
-            r.register6("implCrypt", Receiver.class, byte[].class, int.class, int.class, byte[].class,
-                            int.class, new CounterModeCryptPlugin());
-        }
+        Registration r = new Registration(plugins, "com.sun.crypto.provider.CounterMode", replacements);
+        r.registerConditional(isIntrinsicName(config, "com/sun/crypto/provider/CounterMode", "implCrypt") && config.useAESCTRIntrinsics(), new CounterModeCryptPlugin());
     }
 
-    private static void registerBase64Plugins(InvocationPlugins plugins, GraalHotSpotVMConfig config, MetaAccessProvider metaAccess) {
-        if (config.useBase64Intrinsics()) {
-            Registration r = new Registration(plugins, "java.util.Base64$Encoder");
-            r.register7("encodeBlock",
-                            Receiver.class,
-                            byte[].class,
-                            int.class,
-                            int.class,
-                            byte[].class,
-                            int.class,
-                            boolean.class,
-                            new InvocationPlugin() {
-                                @Override
-                                public boolean apply(GraphBuilderContext b,
-                                                ResolvedJavaMethod targetMethod,
-                                                Receiver receiver,
-                                                ValueNode src,
-                                                ValueNode sp,
-                                                ValueNode sl,
-                                                ValueNode dst,
-                                                ValueNode dp,
-                                                ValueNode isURL) {
-                                    int byteArrayBaseOffset = metaAccess.getArrayBaseOffset(JavaKind.Byte);
-                                    ComputeObjectAddressNode srcAddress = b.add(new ComputeObjectAddressNode(src, ConstantNode.forInt(byteArrayBaseOffset)));
-                                    ComputeObjectAddressNode dstAddress = b.add(new ComputeObjectAddressNode(dst, ConstantNode.forInt(byteArrayBaseOffset)));
-                                    b.add(new ForeignCallNode(BASE64_ENCODE_BLOCK, srcAddress, sp, sl, dstAddress, dp, isURL));
-                                    return true;
-                                }
-                            });
-        }
+    private static void registerBase64Plugins(InvocationPlugins plugins, GraalHotSpotVMConfig config, MetaAccessProvider metaAccess, Replacements replacements) {
+        Registration r = new Registration(plugins, "java.util.Base64$Encoder", replacements);
+        r.registerConditional(config.useBase64Intrinsics(), new InvocationPlugin("encodeBlock", Receiver.class, byte[].class, int.class, int.class, byte[].class, int.class, boolean.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode src,
+                            ValueNode sp, ValueNode sl, ValueNode dst, ValueNode dp, ValueNode isURL) {
+                int byteArrayBaseOffset = metaAccess.getArrayBaseOffset(JavaKind.Byte);
+                ComputeObjectAddressNode srcAddress = b.add(new ComputeObjectAddressNode(src, ConstantNode.forInt(byteArrayBaseOffset)));
+                ComputeObjectAddressNode dstAddress = b.add(new ComputeObjectAddressNode(dst, ConstantNode.forInt(byteArrayBaseOffset)));
+                b.add(new ForeignCallNode(BASE64_ENCODE_BLOCK, srcAddress, sp, sl, dstAddress, dp, isURL));
+                return true;
+            }
+        });
     }
 
     private static void registerCRC32Plugins(InvocationPlugins plugins, GraalHotSpotVMConfig config, Replacements replacements) {
-        if (config.useCRC32Intrinsics) {
-            Registration r = new Registration(plugins, CRC32.class, replacements);
-            r.register2("update", int.class, int.class, new InvocationPlugin() {
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode crc, ValueNode arg) {
-                    final ValueNode crcTableRawAddress = ConstantNode.forLong(config.crcTableAddress);
-                    ValueNode c = new XorNode(crc, ConstantNode.forInt(-1));
-                    ValueNode index = new AndNode(new XorNode(arg, c), ConstantNode.forInt(0xff));
-                    ValueNode offset = new LeftShiftNode(index, ConstantNode.forInt(2));
-                    AddressNode address = new OffsetAddressNode(crcTableRawAddress, new SignExtendNode(offset, 32, 64));
-                    ValueNode result = b.add(new JavaReadNode(JavaKind.Int, address, CRC_TABLE_LOCATION, BarrierType.NONE, false));
-                    result = new XorNode(result, new UnsignedRightShiftNode(c, ConstantNode.forInt(8)));
-                    b.addPush(JavaKind.Int, new XorNode(result, ConstantNode.forInt(-1)));
-                    return true;
-                }
-            });
-            String updateBytesName = JavaVersionUtil.JAVA_SPEC <= 8 ? "updateBytes" : "updateBytes0";
-            r.register4(updateBytesName, int.class, byte[].class, int.class, int.class, new InvocationPlugin() {
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode crc, ValueNode buf, ValueNode off, ValueNode len) {
-                    int byteArrayBaseOffset = b.getMetaAccess().getArrayBaseOffset(JavaKind.Byte);
-                    ValueNode bufAddr = b.add(new ComputeObjectAddressNode(buf, new AddNode(ConstantNode.forInt(byteArrayBaseOffset), off)));
-                    b.addPush(JavaKind.Int, new ForeignCallNode(UPDATE_BYTES_CRC32, crc, bufAddr, len));
-                    return true;
-                }
-            });
-            String updateByteBufferName = JavaVersionUtil.JAVA_SPEC <= 8 ? "updateByteBuffer" : "updateByteBuffer0";
-            r.register4(updateByteBufferName, int.class, long.class, int.class, int.class, new InvocationPlugin() {
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode crc, ValueNode addr, ValueNode off, ValueNode len) {
-                    ValueNode bufAddr = b.add(new AddNode(addr, new SignExtendNode(off, 32, 64)));
-                    b.addPush(JavaKind.Int, new ForeignCallNode(UPDATE_BYTES_CRC32, crc, bufAddr, len));
-                    return true;
-                }
-            });
-        }
+        Registration r = new Registration(plugins, CRC32.class, replacements);
+        r.registerConditional(config.useCRC32Intrinsics() && config.crcTableAddress != 0, new InvocationPlugin("update", int.class, int.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode crc, ValueNode arg) {
+                final ValueNode crcTableRawAddress = ConstantNode.forLong(config.crcTableAddress);
+                ValueNode c = new XorNode(crc, ConstantNode.forInt(-1));
+                ValueNode index = new AndNode(new XorNode(arg, c), ConstantNode.forInt(0xff));
+                ValueNode offset = new LeftShiftNode(index, ConstantNode.forInt(2));
+                AddressNode address = new OffsetAddressNode(crcTableRawAddress, new SignExtendNode(offset, 32, 64));
+                ValueNode result = b.add(new JavaReadNode(JavaKind.Int, address, CRC_TABLE_LOCATION, BarrierType.NONE, false));
+                result = new XorNode(result, new UnsignedRightShiftNode(c, ConstantNode.forInt(8)));
+                b.addPush(JavaKind.Int, new XorNode(result, ConstantNode.forInt(-1)));
+                return true;
+            }
+        });
+        r.registerConditional(config.useCRC32Intrinsics(), new InvocationPlugin("updateBytes0", int.class, byte[].class, int.class, int.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode crc, ValueNode buf, ValueNode off, ValueNode len) {
+                int byteArrayBaseOffset = b.getMetaAccess().getArrayBaseOffset(JavaKind.Byte);
+                ValueNode bufAddr = b.add(new ComputeObjectAddressNode(buf, new AddNode(ConstantNode.forInt(byteArrayBaseOffset), off)));
+                b.addPush(JavaKind.Int, new ForeignCallNode(UPDATE_BYTES_CRC32, crc, bufAddr, len));
+                return true;
+            }
+        });
+        r.registerConditional(config.useCRC32Intrinsics(), new InvocationPlugin("updateByteBuffer0", int.class, long.class, int.class, int.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode crc, ValueNode addr, ValueNode off, ValueNode len) {
+                ValueNode bufAddr = b.add(new AddNode(addr, new SignExtendNode(off, 32, 64)));
+                b.addPush(JavaKind.Int, new ForeignCallNode(UPDATE_BYTES_CRC32, crc, bufAddr, len));
+                return true;
+            }
+        });
     }
 
     private static void registerCRC32CPlugins(InvocationPlugins plugins, GraalHotSpotVMConfig config, Replacements replacements) {
-        if (JavaVersionUtil.JAVA_SPEC > 8 && config.useCRC32CIntrinsics) {
-            Registration r = new Registration(plugins, "java.util.zip.CRC32C", replacements);
-            r.register4("updateBytes", int.class, byte[].class, int.class, int.class, new InvocationPlugin() {
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode crc, ValueNode buf, ValueNode off, ValueNode end) {
-                    int byteArrayBaseOffset = b.getMetaAccess().getArrayBaseOffset(JavaKind.Byte);
-                    ValueNode bufAddr = b.add(new ComputeObjectAddressNode(buf, new AddNode(ConstantNode.forInt(byteArrayBaseOffset), off)));
-                    b.addPush(JavaKind.Int, new ForeignCallNode(UPDATE_BYTES_CRC32C, crc, bufAddr, new SubNode(end, off)));
-                    return true;
-                }
-            });
-            r.register4("updateDirectByteBuffer", int.class, long.class, int.class, int.class, new InvocationPlugin() {
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode crc, ValueNode addr, ValueNode off, ValueNode end) {
-                    ValueNode bufAddr = b.add(new AddNode(addr, new SignExtendNode(off, 32, 64)));
-                    b.addPush(JavaKind.Int, new ForeignCallNode(UPDATE_BYTES_CRC32C, crc, bufAddr, new SubNode(end, off)));
-                    return true;
-                }
-            });
-        }
+        Registration r = new Registration(plugins, "java.util.zip.CRC32C", replacements);
+        r.registerConditional(config.useCRC32CIntrinsics(), new InvocationPlugin("updateBytes", int.class, byte[].class, int.class, int.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode crc, ValueNode buf, ValueNode off, ValueNode end) {
+                int byteArrayBaseOffset = b.getMetaAccess().getArrayBaseOffset(JavaKind.Byte);
+                ValueNode bufAddr = b.add(new ComputeObjectAddressNode(buf, new AddNode(ConstantNode.forInt(byteArrayBaseOffset), off)));
+                b.addPush(JavaKind.Int, new ForeignCallNode(UPDATE_BYTES_CRC32C, crc, bufAddr, new SubNode(end, off)));
+                return true;
+            }
+        });
+        r.registerConditional(config.useCRC32CIntrinsics(), new InvocationPlugin("updateDirectByteBuffer", int.class, long.class, int.class, int.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode crc, ValueNode addr, ValueNode off, ValueNode end) {
+                ValueNode bufAddr = b.add(new AddNode(addr, new SignExtendNode(off, 32, 64)));
+                b.addPush(JavaKind.Int, new ForeignCallNode(UPDATE_BYTES_CRC32C, crc, bufAddr, new SubNode(end, off)));
+                return true;
+            }
+        });
     }
 
     private static void registerArraysSupportPlugins(InvocationPlugins plugins, GraalHotSpotVMConfig config, Replacements replacements) {
-        if (JavaVersionUtil.JAVA_SPEC > 8 && config.useVectorizedMismatchIntrinsic) {
-            Registration r = new Registration(plugins, "jdk.internal.util.ArraysSupport", replacements);
-            r.register6("vectorizedMismatch", Object.class, long.class, Object.class, long.class,
-                            int.class, int.class, new InvocationPlugin() {
-                                @Override
-                                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode a, ValueNode aOffset, ValueNode bObject, ValueNode bOffset,
-                                                ValueNode length, ValueNode log2ArrayIndexScale) {
-                                    ValueNode aAddr = b.add(new ComputeObjectAddressNode(a, aOffset));
-                                    ValueNode bAddr = b.add(new ComputeObjectAddressNode(bObject, bOffset));
-                                    b.addPush(JavaKind.Int, new ForeignCallNode(HotSpotBackend.VECTORIZED_MISMATCH, aAddr, bAddr, length, log2ArrayIndexScale));
-                                    return true;
-                                }
-                            });
-
-        }
+        Registration r = new Registration(plugins, "jdk.internal.util.ArraysSupport", replacements);
+        r.registerConditional(config.useVectorizedMismatchIntrinsic(), new InvocationPlugin("vectorizedMismatch", Object.class, long.class, Object.class, long.class, int.class, int.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode a, ValueNode aOffset, ValueNode bObject, ValueNode bOffset,
+                            ValueNode length, ValueNode log2ArrayIndexScale) {
+                ValueNode aAddr = b.add(new ComputeObjectAddressNode(a, aOffset));
+                ValueNode bAddr = b.add(new ComputeObjectAddressNode(bObject, bOffset));
+                b.addPush(JavaKind.Int, new ForeignCallNode(HotSpotBackend.VECTORIZED_MISMATCH, aAddr, bAddr, length, log2ArrayIndexScale));
+                return true;
+            }
+        });
     }
 
     private static void registerReferencePlugins(InvocationPlugins plugins, Replacements replacements) {
-        if (JavaVersionUtil.JAVA_SPEC >= 16) {
-            Registration r = new Registration(plugins, Reference.class, replacements);
-            r.register2("refersTo0", Receiver.class, Object.class, new InvocationPlugin() {
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode o) {
-                    ValueNode offset = b.add(ConstantNode.forLong(HotSpotReplacementsUtil.referentOffset(b.getMetaAccess())));
-                    AddressNode address = b.add(new OffsetAddressNode(receiver.get(), offset));
-                    FieldLocationIdentity locationIdentity = new FieldLocationIdentity(HotSpotReplacementsUtil.referentField(b.getMetaAccess()));
-                    JavaReadNode read = b.add(new JavaReadNode(StampFactory.object(), JavaKind.Object, address, locationIdentity, BarrierType.WEAK_FIELD, true));
-                    LogicNode objectEquals = b.add(ObjectEqualsNode.create(b.getConstantReflection(), b.getMetaAccess(), b.getOptions(), read, o, NodeView.DEFAULT));
-                    b.addPush(JavaKind.Boolean, ConditionalNode.create(objectEquals, b.add(forBoolean(true)), b.add(forBoolean(false)), NodeView.DEFAULT));
-                    return true;
-                }
+        Registration r = new Registration(plugins, Reference.class, replacements);
+        r.register(new InlineOnlyInvocationPlugin("refersTo0", Receiver.class, Object.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode o) {
+                ValueNode offset = b.add(ConstantNode.forLong(HotSpotReplacementsUtil.referentOffset(b.getMetaAccess())));
+                AddressNode address = b.add(new OffsetAddressNode(receiver.get(), offset));
+                FieldLocationIdentity locationIdentity = new FieldLocationIdentity(HotSpotReplacementsUtil.referentField(b.getMetaAccess()));
+                JavaReadNode read = b.add(new JavaReadNode(StampFactory.object(), JavaKind.Object, address, locationIdentity, BarrierType.WEAK_FIELD, true));
+                LogicNode objectEquals = b.add(ObjectEqualsNode.create(b.getConstantReflection(), b.getMetaAccess(), b.getOptions(), read, o, NodeView.DEFAULT));
+                b.addPush(JavaKind.Boolean, ConditionalNode.create(objectEquals, b.add(forBoolean(true)), b.add(forBoolean(false)), NodeView.DEFAULT));
+                return true;
+            }
 
-                @Override
-                public boolean inlineOnly() {
-                    return true;
-                }
-            });
-            r = new Registration(plugins, PhantomReference.class, replacements);
-            r.register2("refersTo0", Receiver.class, Object.class, new InvocationPlugin() {
-                @Override
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode o) {
-                    ValueNode offset = b.add(ConstantNode.forLong(HotSpotReplacementsUtil.referentOffset(b.getMetaAccess())));
-                    AddressNode address = b.add(new OffsetAddressNode(receiver.get(), offset));
-                    FieldLocationIdentity locationIdentity = new FieldLocationIdentity(HotSpotReplacementsUtil.referentField(b.getMetaAccess()));
-                    JavaReadNode read = b.add(new JavaReadNode(StampFactory.object(), JavaKind.Object, address, locationIdentity, BarrierType.PHANTOM_FIELD, true));
-                    LogicNode objectEquals = b.add(ObjectEqualsNode.create(b.getConstantReflection(), b.getMetaAccess(), b.getOptions(), read, o, NodeView.DEFAULT));
-                    b.addPush(JavaKind.Boolean, ConditionalNode.create(objectEquals, b.add(forBoolean(true)), b.add(forBoolean(false)), NodeView.DEFAULT));
-                    return true;
-                }
+            @Override
+            public boolean isOptional() {
+                return JavaVersionUtil.JAVA_SPEC < 16;
+            }
+        });
+        r = new Registration(plugins, PhantomReference.class, replacements);
+        r.register(new InlineOnlyInvocationPlugin("refersTo0", Receiver.class, Object.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode o) {
+                ValueNode offset = b.add(ConstantNode.forLong(HotSpotReplacementsUtil.referentOffset(b.getMetaAccess())));
+                AddressNode address = b.add(new OffsetAddressNode(receiver.get(), offset));
+                FieldLocationIdentity locationIdentity = new FieldLocationIdentity(HotSpotReplacementsUtil.referentField(b.getMetaAccess()));
+                JavaReadNode read = b.add(new JavaReadNode(StampFactory.object(), JavaKind.Object, address, locationIdentity, BarrierType.PHANTOM_FIELD, true));
+                LogicNode objectEquals = b.add(ObjectEqualsNode.create(b.getConstantReflection(), b.getMetaAccess(), b.getOptions(), read, o, NodeView.DEFAULT));
+                b.addPush(JavaKind.Boolean, ConditionalNode.create(objectEquals, b.add(forBoolean(true)), b.add(forBoolean(false)), NodeView.DEFAULT));
+                return true;
+            }
 
-                @Override
-                public boolean inlineOnly() {
-                    return true;
-                }
-            });
-        }
+            @Override
+            public boolean isOptional() {
+                return JavaVersionUtil.JAVA_SPEC < 16;
+            }
+        });
     }
 }
